SERVER-43360 No year 0 in $dateFromParts expressions